--- a/config.json
+++ b/config.json
@@ -13,16 +13,16 @@
     "eventDisabled": [
         "join.js"
     ],
-    "EMAIL": "kicigo3882@cansku.com",
-    "PASSWORD": "RJ07ZAINA",
+    "EMAIL": "Aanyakhan4700@gmail.com",
+    "PASSWORD": "12AAYAT@@##",
     "OTPKEY": "",
-    "BOTNAME": " ✦🌎𝐏𝐑𝐈𝐍𝐂𝐄🌎🦋🎀:-)──➣✦🍒",
-    "PREFIX": ".",
+    "BOTNAME": " ✦🌎𝐀𝐀𝐍𝐘𝐀🌎🦋🎀:-)──➣✦🍒",
+    "PREFIX": "√",
     "ADMINBOT": [
-        "61560621821421"
+        "100070533033911"
     ],
     "NDH": [
-        "61560621821421"
+        "100070533033911"
     ],
     "DATABASE": {
         "sqlite": {
